--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         red." What a joke.
     </p>
     <p>
-        Real programmers code, not silly markup languages. On Arch linux(btw).
+        Real programmers code on Arch linux(btw), not silly markup languages.
     </p>
 </body>
 
